--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user1.png" alt="">
+                    <img src="user1.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>
                         I am writing to express my keen interest in furthering my education and expanding my skills in
-                        the realm of technology. Currently I am M-Tech student at IIT Jammu in Computer Science.
+                        the realm of technology. Currently, I am an M-Tech student at IIT Jammu in Computer Science.
                         <br>
                         My educational background and current skill set encompass a wide range of technical disciplines.
                         I have successfully honed my skills in Data Structures and Algorithms, C++, and C, which form
