--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
             <h1 class="sub-title">Online Project</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/tic-tac-toe2.jpg" alt="">
+                    <img src="tic-tac-toe2.jpg" alt="">
                     <div class="layer">
                         <h3>Tic Tac Toe Game</h3>
-                        <p>Here you can play a simple tic tac toe game. And at the end also you
-                            can see who win the game.
+                        <p>Here you can play a simple tic-tac-toe game. And in the end also you
+                            can see who wins the game.
                         </p>
                         <a href="https://saikat2022das.github.io/Tic-Tac-Toe/"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/two-Good22.png" alt="">
+                    <img src="two-Good22.png" alt="">
                     <div class="layer">
                         <h3>Design And <br> Animated Website</h3>
                         <p>Developed a captivating website with HTML, CSS, and JavaScript for an immersive, responsive,
@@ -158,8 +158,8 @@
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>The app connects you to the talented people around the world.
-                            Download if from play store.
+                        <p>The app connects you to talented people around the world.
+                            Download if from the Play Store.
                         </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
