--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <a href="https://github.com/Saikat2022Das?tab=repositories"><i
                                 class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="images/Sai_Cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Sai_Cv.pdf" download class="btn btn2">Download CV</a>
                 </div>
 
                 <div class="contact-right">
