--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" alt="">
+                    <img src="work-3.png" alt="">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
                         <p>The app connects you to talented people around the world.
