--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/818a5d4c51.js" crossorigin="anonymous"></script>
     <!-- This link for icon  -->
+    
 </head>
 
 <body>
@@ -45,15 +46,14 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>
-                        I am writing to express my keen interest in furthering my education and expanding my skills in
-                        the realm of technology. Currently, I am an M-Tech student at IIT Jammu in Computer Science.
-                        <br>
-                        My educational background and current skill set encompass a wide range of technical disciplines.
-                        I have successfully honed my skills in Data Structures and Algorithms, C++, and C, which form
-                        the backbone of computer science and software engineering. Additionally, I have delved into the
-                        exciting field of Machine Learning, which has allowed me to leverage data-driven insights to
-                        solve complex problems and make intelligent decisions.
+                    <p class="Myself">
+
+                        Innovative Software Engineer with a Strong Foundation in Programming and Problem-Solving.
+                        Proficient in Multiple Programming Languages and Development Tools. Experienced in Full-Stack
+                        Development, Agile Methodologies, and Software Testing. Proven Ability to Design and Implement
+                        Scalable, Efficient, and Maintainable Software Solutions. Passionate About Staying Up-to-Date
+                        with Emerging Technologies and Collaborating with Cross-Functional Teams to Deliver Cutting-Edge
+                        Products.
 
                     </p>
                     <div class="tab-titles">
@@ -64,28 +64,51 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/ App interfaces</li>
-                            <li><span>Web Developmet</span><br>HTML, CSS, JavaScript, React, NodeJs</li>
-                            <li><span>Programming Language</span><br>C++, C, Python</li>
+                            <li><span>Operating System</span><br> Windows, Linux</li>
+                            <li><span>Web Development</span><br>HTML, CSS, JavaScript, Rest API, Amazon Web
+                                Services(AWS)</li>
+                            <li><span>Programming Language</span><br>C++, C, Python, JAVA</li>
                             <li><span>Softwares/Tools</span><br>Git, SQL, LaTex</li>
                             <li><span>Big Data</span><br>Hadoop, Apache Spark</li>
-                            <li><span>Other Technology</span><br>Machine Learning, NLP, Deep Learning, Digital Image Processing, System Verilog, Digital Signal
+                            <li><span>Other Technology</span><br>Machine Learning, NLP, Deep Learning, Digital Image
+                                Processing, System Verilog, Digital Signal
                                 Processing</li>
+                            <li><span>Fream Work</span><br>React Js, Node Js, Express Js, MongoDB</li>
+                            <li><span>DataBase</span>NoSQL, PostgreSQL</li>
+                            <li><Span>Others</Span>Teaching Assistent, Public Speaking</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span style="font-weight: 700;">Indian Institute Of Technology Jammu(IIT Jammu)</span><br>Computer Science
-                                (2022-2024)</li>
-                            <li><span style="font-weight: 700;">Techno International NewTown</span><br>Electronics and Communication Engineering
-                                (2016-2020)</li>
+                            <li><span style="font-weight: 700;">Indian Institute Of Technology Jammu(IIT
+                                    Jammu)</span><br>M-Tech in Computer Science</li>
+                            <li>Expected june 2024 | CGPA 8.1</li>
+                            <li><span style="font-weight: 700;">Techno International NewTown</span><br>B-Tech in
+                                Electronics and
+                                Communication Engineering
+                            </li>
+                            <li>2016 - 2020 | CGPA 7.72</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="achievements">
                         <ul>
-                            <li><p style="font-weight: 700; display: inline;" >GATE</p> Qualified on 2021 (AIR - 539)
+                            <li>
+                                <p style="font-weight: 700; display: inline;">GATE</p> Qualified on 2021 (AIR - 539)
+                                <br>
+                                <p style="font-weight: 700; display: inline;">Principles of Communication System 1</p>
+                                got 85% marks from IIT Kharagpur. <br>
+                                <p style="font-weight: 700; display: inline;">Flipkart SDE grid 5.0</p> got selected.
+                                <br>
+                                <p style="font-weight: 700; display: inline;"> <a
+                                        href="https://www.udemy.com/certificate/UC-13ba4ac5-cd06-4a3e-9485-cbb42ec0d6c0/">Completed
+                                        Full Stack Web Development</a></p> course from Udemy<br>
+                                Completed a course on <p style="font-weight: 700; display: inline;"> <a
+                                        href="https://www.coursera.org/account/accomplishments/verify/LK2J9UV4UGVZ">Supervised
+                                        Machine Learning</a></p> authorized by DeepLearning.AI
+                                and Stanford University.<br>
+
                             </li>
                         </ul>
                     </div>
@@ -102,24 +125,40 @@
             <div class="services-list">
                 <div>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quia soluta deserunt nihil
-                        molestias ullam pariatur accusantium tenetur ad facere!
-                    </p>
-                    <a href="#">Learn More</a>
+                    <ul>
+                        <li><span>🌐 Tech Tapestry:</span> React, Node.js, and more - a tech symphony in every project!
+                        </li>
+                        <li><span>💡 Project Showcase:</span> A collection of meticulously crafted web wonders.</li>
+                        <li><span>💻 Full-Stack Alchemy:</span> Conquering realms with skills and innovation.</li>
+                    </ul>
+                    <h3><a href="web_project.html">Some Projects</a></h3>
                 </div>
                 <div>
                     <h2>Machine Learning</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quia soluta deserunt nihil
-                        molestias ullam pariatur accusantium tenetur ad facere!
-                    </p>
-                    <a href="#">Learn More</a>
+                    <ul>
+                        <li>Experienced in various ML algorithms.</li>
+                        <li>Fluent in transforming unstructured data.</li>
+                        <li>Aspiring ML Engineer, ready for new challenges and innovative solutions.</li>
+                    </ul>
+                    <!-- <h2><a href="ml_project.html">Learn More</a></h2> -->
+                    <a href="ml_project.html">Some Projects</a>
                 </div>
                 <div>
-                    <h2>Software Developmebt</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quia soluta deserunt nihil
-                        molestias ullam pariatur accusantium tenetur ad facere!
-                    </p>
-                    <a href="#">Learn More</a>
+                    <h2>Coding Profile</h2>
+                    <ul>
+                        <li>
+                            <h3><a href="https://auth.geeksforgeeks.org/user/saikat34qeo">GeeksForGeeks</a></h3> Rank 3
+                        </li>
+                        <li>
+                            <h3><a href="https://leetcode.com/SAI3141/">LeetCode</a></h3>
+                        </li>
+
+                    </ul>
+                    <br>
+                    <p>Successfully tackled over 1,000 challenges and emerged victorious! 🚀🧠 Whether it's coding
+                        conundrums, complex algorithms, or real-world puzzles, I've conquered them all with precision
+                        and expertise. Ready for the next thousand! 💻✨</p>
+
                 </div>
 
             </div>
@@ -136,8 +175,8 @@
                     <img src="tic-tac-toe2.jpg" alt="">
                     <div class="layer">
                         <h3>Tic Tac Toe Game</h3>
-                        <p>Here you can play a simple tic-tac-toe game. And in the end also you
-                            can see who wins the game.
+                        <p>Here you can play a simple tic tac toe game. And at the end also you
+                            can see who win the game.
                         </p>
                         <a href="https://saikat2022das.github.io/Tic-Tac-Toe/"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -157,9 +196,11 @@
                 <div class="work">
                     <img src="work-3.png" alt="">
                     <div class="layer">
-                        <h3>Online Shopping App</h3>
-                        <p>The app connects you to talented people around the world.
-                            Download if from the Play Store.
+                        <h3>Online Music App</h3>
+                        <p>🎶 Welcome to Melody Haven – where every note tells a story. Our playlist spans genres and
+                            eras, but we're not just curators; we're creators. Share your favorite songs, and let's
+                            build a harmony that transcends boundaries. Melody Haven - where every song is an invitation
+                            to a world of endless possibilities! 🌈🎵
                         </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
